Prevent navbar from causing horizontal scroll

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -6,7 +6,7 @@
 
   gap: 20px;
   height: 50px;
-  width: 100vw;
+  width: 100%;
 
   margin-bottom: 20px;
 
